@@ -9,3 +9,7 @@ Java. Уровень 3
 Урок 7. Reflection API и аннотации
 Урок 8. Подготовка к собеседованию
 
+Для запуска клиентского чата:
+Appearance & Behavior -> Path Variables -> PATH_TO_FX путь к каталогу lib
+--module-path ${PATH_TO_FX} --add-modules javafx.controls,javafx.fxml
+
